--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ProjectDb": ""
+    "ProjectDb": "Server=sqlserverhostv.database.windows.net;Database=Project;Authentication=Sql Password;User ID=adminUsername;Password=adminPass1;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
